# django_base_ecommerce

./: LICENSE  README.rst  pyproject.toml
django_base_ecommerce/: admin.py  apps.py  models.py
django_base_ecommerce/migrations/: 0001_initial.py
